# bench-in-situ

./: .gitignore  .gitmodules  CMakeLists.txt  DownloadBench.sh  DownloadWget.sh  README.md  deisa.yml  downloadLibs.sh  env.sh  installBench.sh  io.yml  io_chkpt.yml  io_deisa.yml  launch_insitu.sh  launch_simulation.sh  offline_ark_install.sh  offline_env_download.sh  offline_env_install.sh  offline_pdi_install.sh  setup.ini  setupPyEnv.sh  setupPythonEnv.sh  setup_python_env.sh
cmake/: DefaultBuildType.cmake  EulerCompileOptions.cmake  PreventInSourceBuild.cmake  Version.cmake
envs/: README.md  ruche.env
envs/adastra/: io_chkpt.yml  io_deisa.yml  launcher.sh
envs/adastra/1/: launcher.sh  launcherBench.sh  launcher_noDeisa.sh  modules.env  setup.ini
envs/adastra/128/: launcher.sh  launcher_noDeisa.sh  setup.ini
envs/adastra/16/: launcher.sh  launcher_noDeisa.sh  setup.ini
envs/adastra/2/: launcher.sh  launcher_noDeisa.sh  setup.ini
envs/adastra/256/: launcher.sh  launcher_noDeisa.sh  setup.ini
envs/adastra/32/: launcher.sh  launcher_noDeisa.sh  setup.ini
envs/adastra/4/: launcher.sh  launcher_noDeisa.sh  setup.ini
envs/adastra/64/: launcher.sh  launcher_noDeisa.sh  setup.ini
envs/adastra/8/: launcher.sh  launcher_noDeisa.sh  setup.ini
envs/adastra/l/: launcher.sh
envs/adastra/m/: launcher.sh
envs/adastra/s/: launcher.sh  modules.env
envs/adastra/xl/: launcher.sh
envs/adastra/xs/: launcher.sh
envs/adastra/xxl/: launcher.sh  setup.ini
envs/jeanzay/: launcher.sh  modules.env
envs/ruche/: README.md  io_deisa.yml  launcher.sh  modules.env  setup.ini
envs/ruche/cpu/1/: io_deisa.yml  launcher.sh
envs/ruche/cpu/1-node/: launcher.sh  setup.ini
envs/ruche/cpu/4/: launcher.sh  modules.env  setup.ini
envs/ruche/cpu/4-nodes/: io_deisa.yml  launcher.sh
in-situ/: fft.py  fft_updated.py  test.py  zarr2hdf5.py
lib/inih/: CMakeLists.txt  INIReader.cpp  INIReader.hpp
scripts/: build_all.sh  build_pdi.sh  build_simulation.sh  env.sh  launch_insitu.sh  launch_simulation.sh  offline_python_env_download.sh  offline_python_env_setup.sh
src/: CMakeLists.txt  CopyFromBufferKernel.hpp  CopyToBufferKernel.hpp  Hydro.cpp  Hydro.hpp  HydroBaseKernel.hpp  HydroBoundariesKernel.hpp  HydroConstants.hpp  HydroEngine.cpp  HydroEngine.hpp  HydroFillingCurve.hpp  HydroParams.cpp  HydroParams.hpp  HydroProblem.hpp  HydroSolver.hpp  HydroTypes.hpp  HydroUniformGrid.hpp  HydroUnits.hpp  HydroVersion.cpp.in  HydroVersion.hpp  MHDSystem.hpp  SolverFactory.cpp  SolverFactory.hpp  Timer.hpp  main.cpp
src/godunov_solver/: FluxesAndUpdateExecution.cpp  FluxesAndUpdateExecution.hpp  FluxesAndUpdateKernelDispatch.cpp  FluxesAndUpdateKernelDispatch.hpp  Godunov.cpp  Godunov.hpp  GodunovFluxesKernel.hpp  MusclReconstructionExecution.cpp  MusclReconstructionExecution.hpp  MusclReconstructionKernel.hpp
src/godunov_solver/ars/: HydroRiemannAllRegime.hpp  HydroRiemannAllRegime_experiment_entropy.hpp  MHD3W_optimized.hpp  MHDRiemann_ARWB_5W.hpp  MHDRiemann_AllRegime_3W.hpp  MHDRiemann_AllRegime_5W.hpp
src/io/: Reader.cpp  Reader.hpp  ReaderBase.hpp  ReaderPDI.cpp  ReaderPDI.hpp  Writer.cpp  Writer.hpp  WriterBase.hpp  WriterPDI.cpp  WriterPDI.hpp  WriterTypes.hpp  WriterVTK.cpp  WriterVTK.hpp
src/linalg/: Tensor.hpp  Tensor_1.hpp  Tensor_1_impl.hpp  Tensor_2.hpp  Tensor_2_impl.hpp  Tensor_3.hpp  Tensor_3_impl.hpp  Vector.hpp  Vector1.hpp  Vector1_impl.hpp  Vector2.hpp  Vector2_impl.hpp  Vector3.hpp  Vector3_impl.hpp
src/problems/: BlastInitKernel.hpp  BlastProblem.cpp  BlastProblem.hpp  Blast_low_PB_InitKernel.hpp  Blast_low_PB_Problem.cpp  Blast_low_PB_Problem.hpp  CMakeLists.txt  ConvectionBoundariesKernel.hpp  ConvectionInitKernel.hpp  ConvectionParams.hpp  ConvectionProblem.cpp  ConvectionProblem.hpp  GreshoInitKernel.hpp  GreshoParams.hpp  GreshoProblem.cpp  GreshoProblem.hpp  ImplodeInitKernel.hpp  ImplodeProblem.cpp  ImplodeProblem.hpp  KevinHelmoltzMHDBoundariesKernel.hpp  KevinHelmoltzMHDInitKernel.hpp  KevinHelmoltzMHDProblem.cpp  KevinHelmoltzMHDProblem.hpp  OTangInitKernel.hpp  OTangParams.hpp  OTangProblem.cpp  OTangProblem.hpp  ProblemFactory.cpp  ProblemFactory.hpp  RayleighTaylorBoundariesKernel.hpp  RayleighTaylorInitKernel.hpp  RayleighTaylorParams.hpp  RayleighTaylorProblem.cpp  RayleighTaylorProblem.hpp  Riemann2dInitKernel.hpp  Riemann2dProblem.cpp  Riemann2dProblem.hpp  RiemannInitKernel.hpp  RiemannParams.hpp  RiemannProblem.cpp  (+7 more)
src/shared/: ConservativeToPrimitiveExecution.cpp  ConservativeToPrimitiveExecution.hpp  ConservativeToPrimitiveKernel.hpp  ConvectionSourceTermExecution.cpp  ConvectionSourceTermExecution.hpp  ConvectionSourceTermKernel.hpp  MagneticResistivityExecution.cpp  MagneticResistivityExecution.hpp  MagneticResistivityKernel.hpp  PrimitiveToConservativeExecution.cpp  PrimitiveToConservativeExecution.hpp  PrimitiveToConservativeKernel.hpp  TimeStep.hpp  TimeStepExecution.cpp  TimeStepExecution.hpp  TimeStepKernel.hpp  global_mean.hpp  global_meanExecution.cpp  global_meanExecution.hpp  global_meanKernel.hpp  slice_average.hpp  slice_averageKernel.hpp  vp2Execution.cpp  vp2Execution.hpp
src/thermodynamics/: CMakeLists.txt  PerfectGas.cpp  PerfectGas.hpp  StiffenedGas.cpp  StiffenedGas.hpp  ThermoParams.cpp  ThermoParams.hpp
src/utils/: Stringify.hpp  Utils.hpp
